Beginning of Terminology section. Next steps: Definitions and corman book reference

--- a/Report/ADTrees_root.tex
+++ b/Report/ADTrees_root.tex
@@ -38,6 +38,7 @@ Attack Trees, ADTerms, Attribute Domains
 
 \section{Introduction}
 \section{Terminology}
+A \textit{graph} $G=(V_G,E_G)$ is a tuple consisting of two sets - the set of vertices and the set of edges. An \textit{edge} $e = (v,w), v,w \in V_G$ is a tuple and describes a connectivity relation between two vertices. Unless otherwise mentioned, the graphs are \textit{undirected}, meaning that the edge $(u,v)$ is identical to the edge $(v,u)$,$u,v\in V_G$. A \textit{Tree} $T$ 
 \section{Abstract syntax: ADTerms}
 \section{Propositional semantics}
 \section{Attributes}
